flang/test/semantics/resolve11.f90
module m
  public i
  !ERROR: The accessibility of 'i' has already been specified
  private i
end
